data/issues_nolabel/nolabel_test_16850.txt
concurrent.futures for Python 2 installed with tensorflow-gpu with pip3

We noticed an issue with the tensorflow-gpu package available in pip for Python 3: it leads to concurrent.futures for Python 2 being installed as a dependency.
$ jupyter-notebook --no-browser
Traceback (most recent call last):
  File "/share/software/user/open/py-jupyter/1.0.0_py36/bin/jupyter-notebook", line 7, in <module>
    from notebook.notebookapp import main
  File "/share/software/user/open/py-jupyter/1.0.0_py36/lib/python3.6/site-packages/notebook/notebookapp.py", line 35, in <module>
    from jinja2 import Environment, FileSystemLoader
  File "/share/software/user/open/py-jupyter/1.0.0_py36/lib/python3.6/site-packages/jinja2/__init__.py", line 81, in <module>
    _patch_async()
  File "/share/software/user/open/py-jupyter/1.0.0_py36/lib/python3.6/site-packages/jinja2/__init__.py", line 77, in _patch_async
    from jinja2.asyncsupport import patch_all
  File "/share/software/user/open/py-jupyter/1.0.0_py36/lib/python3.6/site-packages/jinja2/asyncsupport.py", line 13, in <module>
    import asyncio
  File "/share/software/user/open/python/3.6.1/lib/python3.6/asyncio/__init__.py", line 21, in <module>
    from .base_events import *
  File "/share/software/user/open/python/3.6.1/lib/python3.6/asyncio/base_events.py", line 17, in <module>
    import concurrent.futures
  File "/share/software/user/open/py-tensorflow/1.5.0_py36/lib/python3.6/site-packages/concurrent/futures/__init__.py", line 8, in <module>
    from concurrent.futures._base import (FIRST_COMPLETED,
  File "/share/software/user/open/py-tensorflow/1.5.0_py36/lib/python3.6/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

The workaround is to remove concurrent.futures as it is already included in Python 3 standard library.